# toychacha-rs

./: CLAUDE.md  Cargo.toml  README.md  aqua.yaml  lefthook.yml
.github/: dependabot.yml
.github/workflows/: ci.yml
benches/: benchmark.rs
src/: aead.rs  chacha.rs  lib.rs  poly.rs
